[gd_scene load_steps=39 format=2]

[ext_resource path="res://enemies/pumpkin_king.gd" type="Script" id=1]
[ext_resource path="res://assets/LPC Base Assets/sprites/monsters/pumpking.png" type="Texture" id=2]
[ext_resource path="res://common/aggression_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/hurt_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/HammersmithOne-8.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/slash.png" type="Texture" id=6]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0005.png" type="Texture" id=7]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0013.png" type="Texture" id=8]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0011.png" type="Texture" id=9]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0001.png" type="Texture" id=10]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0017.png" type="Texture" id=11]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0007.png" type="Texture" id=12]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0009.png" type="Texture" id=13]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0003.png" type="Texture" id=14]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0019.png" type="Texture" id=15]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0015.png" type="Texture" id=16]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0023.png" type="Texture" id=17]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0027.png" type="Texture" id=18]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0025.png" type="Texture" id=19]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0030.png" type="Texture" id=20]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0029.png" type="Texture" id=21]
[ext_resource path="res://assets/blender-volumetric-particles-effects/effect-images/fire/0021.png" type="Texture" id=22]
[ext_resource path="res://assets/spike_attack/spike-1.png" type="Texture" id=23]
[ext_resource path="res://assets/spike_attack/spike-2.png" type="Texture" id=24]
[ext_resource path="res://assets/spike_attack/spike-3.png" type="Texture" id=25]
[ext_resource path="res://common/hit_box.tscn" type="PackedScene" id=26]

[sub_resource type="Animation" id=9]
resource_name = "Die"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("DieSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DieSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:isInvincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:isAggressive")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HitSprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HitBox/HitShape:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("HurtSprite:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HitSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:isAttacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HurtSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=1]
resource_name = "WalkDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:enemyFacing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:isInvincible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:isAggressive")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DieSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HitSprite:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:isAttacking")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("HitBox/HitShape:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkLeft"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:enemyFacing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:isInvincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:isAggressive")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "WalkRight"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:isAggressive")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:isInvincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:enemyFacing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:enemyFacing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:isInvincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:isAggressive")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HitSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:isAttacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 30.2702

[sub_resource type="CircleShape2D" id=6]
radius = 700.0

[sub_resource type="CircleShape2D" id=11]
radius = 71.1367

[sub_resource type="CircleShape2D" id=7]
radius = 30.6409

[node name="PumpkinKing" type="KinematicBody2D" groups=[
"boss",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
maxHealth = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 9 )
anims/Hit = SubResource( 10 )
anims/Hurt = SubResource( 8 )
anims/WalkDown = SubResource( 1 )
anims/WalkLeft = SubResource( 2 )
anims/WalkRight = SubResource( 3 )
anims/WalkUp = SubResource( 4 )

[node name="HitPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 6

[node name="HurtSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -1.02667, 15.4003 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="HitSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 23 )

[node name="DieSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 12.1919 )
shape = SubResource( 5 )

[node name="AggressionBox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0
collision_mask = 8

[node name="area" parent="AggressionBox" index="0"]
shape = SubResource( 6 )

[node name="HitBox" parent="." instance=ExtResource( 26 )]
visible = false
collision_mask = 8
damage = 10.0

[node name="HitShape" parent="HitBox" index="0"]
position = Vector2( 0, 7.18678 )
shape = SubResource( 11 )

[node name="CooldownTimer" parent="HitBox" index="1"]
wait_time = 4.0

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16
collision_mask = 0

[node name="HurtShape" parent="HurtBox" index="0"]
position = Vector2( -0.27739, 12.7599 )
shape = SubResource( 7 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -38.2774
margin_top = 45.2191
margin_right = 38.7226
margin_bottom = 59.2191
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="." to="." method="_on_PumpkinKing_tree_entered"]

[editable path="AggressionBox"]

[editable path="HitBox"]

[editable path="HurtBox"]
